--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,8 +8,8 @@ layout: default
   <h1 class="post-title">{{ page.title }}</h1>
   {% if site.plugins contains "jekyll/tagging" %}
   <div class="post-tags">
-      {% for tag in page.tags %}
-      <a class="tag" href="/tag/{{ tag }}/">{{ tag }}</a>
+      {% for post in site.posts limit:5 %}  
+               <li><a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a></li>  
       {% endfor %}
   </div>
   {% endif %}
