--- a/_includes/search.html
+++ b/_includes/search.html
@@ -4,7 +4,7 @@
 
 <h1>Display a Search Field</h1>
 
-<form action="/action_page.php">
+<form action="/index.html">
   <label for="gsearch">Search Google:</label>
   <input type="search" id="gsearch" name="gsearch">
   <input type="submit">
