--- a/_includes/author.html
+++ b/_includes/author.html
@@ -9,7 +9,7 @@
         {% endcapture %}
     {% endif %}
     {% if avatar_image %}
-        <img src="{{ avatar_image }}" class="author-avatar" alt="Avatar" />
+        <img src="{{ assets/hacker.png }}" class="author-avatar" alt="Avatar" />
     {% endif %}
 {{ site.description }}
 </div>
