--- a/_includes/author.html
+++ b/_includes/author.html
@@ -9,7 +9,7 @@
         {% endcapture %}
     {% endif %}
     {% if avatar_image %}
-        <img src="{{ https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwww.pngmart.com%2Ffiles%2F11%2FHacker-PNG-Clipart.png&f=1&nofb=1 }}" class="author-avatar" alt="Avatar" />
+        <img src="{{ https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwww.ashreinu.us%2Fwp-content%2Fuploads%2F2017%2F11%2FTop-5-hacking-tools.jpg&f=1&nofb=1 }}" class="author-avatar" alt="Avatar" />
     {% endif %}
 {{ site.description }}
 </div>
