--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,8 @@ layout: default
 {% endunless %}
 {% assign posts_count = paginator.posts | size %}
 {% if posts_count > 0 %}
-<h1>recent articles</h1>
+<h1>Ultimos Post</h1>
+    <marquee>HTB Writeups</marquee>
     <div class="post-links">
       {% for post in paginator.posts %}
         <div class="post-link-wrapper">
