--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@ layout: default
 {% endunless %}
 {% assign posts_count = paginator.posts | size %}
 {% if posts_count > 0 %}
-<h1>$echo "Ultimas Publicaciones"</h1>
+<h1>.. Ultimas Publicaciones ..</h1>
     <marquee>// HTB Resumenes // Write Ups // Tecnicas // Active Directory // Conceptos // Tools //</marquee>
     <div class="post-links">
       {% for post in paginator.posts %}
