--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,8 +6,8 @@ layout: default
 {% endunless %}
 {% assign posts_count = paginator.posts | size %}
 {% if posts_count > 0 %}
-<h1>.. Ultimas Publicaciones ..</h1>
-    <marquee>// HTB Resumenes // Write Ups // Tecnicas // Active Directory // Conceptos // Tools //</marquee>
+<h1>.. Last Posts ..</h1>
+    <marquee>// HTB // TryHackMe // OvertheWire // PortSwigger // Write Ups // OWASP Top 10 // Active Directory // Tecnicas // Conceptos // Tools //</marquee>
     <div class="post-links">
       {% for post in paginator.posts %}
         <div class="post-link-wrapper">
